--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,8 @@
 .visualiser-container {
   display: flex;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 90vh;
+  margin: 1em 1em 1em 30vw;
 }
 
 .array-container {
