--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,10 @@
 }
 
 .visualiser-container {
-  width: 70vw;
-  margin: 2em 12em;
+  width: 60vw;
+  margin-left: auto;
+  margin-right: 3em;
+  margin-top: 2em;
 }
 
 .array-container {
