--- a/src/styles/LeftText.css
+++ b/src/styles/LeftText.css
@@ -2,12 +2,10 @@
   text-decoration: none;
   list-style-type: none;
 }
-.container {
-  border: 1px solid red;
-  display: flex;
-}
+
 .text-container {
-  border: 1px solid red;
+  border: 1px solid rgb(207, 207, 207);
+  margin: 1em 1em 0 0;
 }
 
 .text-quick-link {
@@ -15,7 +13,6 @@
 }
 
 .text-para-container {
-  border: 1px solid grey;
   height: 60vh;
 }
 .text-algo-description {
@@ -24,4 +21,8 @@
 
 .text-link {
   color: rgb(21, 95, 207);
+}
+
+.text-references-container ul li {
+  margin: 1em 0.3em;
 }
