--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,34 @@
 #new-array-button {
   margin-right: 9em;
 }
+
+@media only screen and (max-width: 780px) {
+  .container {
+    display: flex;
+  }
+  .visualiser-container {
+    width: 60vw;
+    margin: 1em 1em 0 auto;
+  }
+
+  .app-container {
+    position: relative;
+    margin: 2em 2em;
+    width: 60vw;
+  }
+
+  .app-button {
+    padding: 1em;
+    width: 100%;
+    height: 100%;
+  }
+
+  .app-button:hover {
+    color: rgb(86, 121, 185);
+    cursor: pointer;
+  }
+
+  #new-array-button {
+    margin-right: 2em;
+  }
+}
