--- a/src/App.css
+++ b/src/App.css
@@ -52,31 +52,37 @@
 
 @media only screen and (max-width: 780px) {
   .container {
-    display: flex;
+    display: block;
   }
   .visualiser-container {
-    width: 60vw;
-    margin: 1em 1em 0 auto;
+    width: 90vw;
+    margin: none;
+  }
+
+  .array-container {
+    margin-left: 1em;
+    width: 90vw;
   }
 
   .app-container {
     position: relative;
-    margin: 2em 2em;
-    width: 60vw;
+    margin: 0;
+    justify-content: space-evenly;
+    width: 90vw;
+    margin-left: 1em;
   }
 
   .app-button {
-    padding: 1em;
-    width: 100%;
-    height: 100%;
-  }
-
-  .app-button:hover {
-    color: rgb(86, 121, 185);
-    cursor: pointer;
+    border: solid 1px rgb(223, 223, 223);
+    width: 8em;
+    font-weight: 400;
+    height: 3em;
+    border-radius: 3px;
+    margin: 1em 0;
+    padding: 0 1em;
   }
 
   #new-array-button {
-    margin-right: 2em;
+    margin-right: 0;
   }
 }
